Fix spacing issues

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -195,7 +195,6 @@
 .banner__box > * + .banner__buttons {
   margin: 0 auto;
   margin-top: 2.3rem;
-  transform: translateX(1rem);
 }
 
 .banner__box > * + .banner__buttons--multiple {
@@ -219,6 +218,10 @@
 .banner__content .button {
   height: auto;
   margin-right: 2rem;
+}
+
+.banner__content .button:last-child {
+  margin-right: 0;
 }
 
 .banner__box > * + .banner__text {
